# TaskFlowAI

./: .env.example  .gitignore  AGENT.md  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: coding.mdc  docs.mdc  refactor.mdc  testing.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_refresh_tokens.py  003_notifications.py  004_attachments.py  005_episodic_memory.py  006_security_layer1.py  007_consent_records.py
backend/: AGENT.md  __init__.py  exceptions.py  logging_config.py  main.py  metrics.py  rate_limit_middleware.py  settings.py  telemetry.py
backend/agents/: __init__.py
backend/db/: __init__.py  base.py  models.py  session.py
backend/dependencies/: auth.py  database.py  rbac.py
backend/graph/: AGENT.md  __init__.py  builder.py  consensus.py  dlq_handler.py  factory.py  post_process.py  state.py
backend/kernel/: AGENT.md  __init__.py  config_loader.py  errors.py  identity_manager.py  memory_manager.py  scheduler.py  security_monitor.py  tool_manager.py
backend/llm/: __init__.py  cache_warmer.py  deterministic.py  local.py  prompt_loader.py  router.py
backend/mcp/: __init__.py  client.py  postgres_stdio.py  quarantine.py  stdio_transport.py  validator.py
backend/memory/: __init__.py  episodic.py  quarantine.py  working.py
docs/: AGENTIC-CONSENT.md  AGENTIC-REFACTORING.md  DEPLOYMENT-GATES.md  EXECUTION-RULES.md  GOVERNANCE.md  IDENTITY-PROPAGATION.md  KICKOFF-PROMPT.md  LOCAL-LLM.md  OBSERVABILITY.md  PLAN.md  SECURITY.md  SUPPLY-CHAIN-SECURITY.md  TOKEN-EFFICIENCY.md  TaskFlowAI_Project_Proposal.md
frontend/: AGENT.md  package-lock.json  package.json  vitest.config.ts
infrastructure/: AGENT.md  Dockerfile  agent-manifest.json  agent-manifest.sig  ai-bom.yaml  docker-compose.yml  nginx.conf
prompts/: AGENT.md
scripts/: pip_audit_gate.py  sign_agent_manifest.py  smoke_test_staging.py  validate_ai_bom.py
(+310 files in other folders)
